--- a/HMS/templates/form_diab_result.html
+++ b/HMS/templates/form_diab_result.html
@@ -19,9 +19,6 @@
     <form action="result"></form>
 
         <div class="background1"></div>
-        <div class="background2">
-            <!-- <img src="./public/Ellipse_13.svg"> -->
-        </div>
         <div class="header">
             <a href="./homepage" class="logo">
                 <img src="../static/public/logo.svg" alt="">
@@ -44,7 +41,7 @@
                 <div class="ellipse10">
                     <div class="ellipse11">
                         <div class="HDisease_Prediction"><img
-                            src="../static/public/FrameDiabetes.svg" alt=""></div>
+                            src="../static/public/DiabetesFrame.svg" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -63,13 +60,17 @@
                     <div class="grid-item" id="grid-item1">
                         <div>High BP</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="Yes" value="HighBP" checked>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighBP" id="Yes" value="HighBP" checked>
+                                    <label class="form-check-label" for="Yes">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="No" value="NormalBP" readonly>
-                                <label class="form-check-label" for="No">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighBP" id="No" value="NormalBP" readonly>
+                                    <label class="form-check-label" for="No">No</label>
+                                </div>
                             </div>
                         </div>
 
@@ -78,13 +79,17 @@
                     <div class="grid-item" id="grid-item2">
                         <div>High Cholestrol</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="Yes" value="HighChol" readonly>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighChol" id="Yes" value="HighChol" readonly>
+                                    <label class="form-check-label" for="Yes">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="No" value="NormalChol" readonly>
-                                <label class="form-check-label" for="No">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighChol" id="No" value="NormalChol" readonly>
+                                    <label class="form-check-label" for="No">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -94,13 +99,17 @@
                     <div class="grid-item" id="grid-item4">
                         <div>Stroke</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="Yes" value="YesStroke" readonly>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Stroke" id="Yes" value="YesStroke" readonly>
+                                    <label class="form-check-label" for="Yes">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="No" value="NoStroke" readonly>
-                                <label class="form-check-label" for="No">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Stroke" id="No" value="NoStroke" readonly>
+                                    <label class="form-check-label" for="No">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -108,15 +117,19 @@
                     <div class="grid-item" id="grid-item5">
                         <div>HeartDisease or Attack</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes"
-                                    value="YesHeartDiseaseorAttack" readonly>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes"
+                                        value="YesHeartDiseaseorAttack" readonly>
+                                    <label class="form-check-label" for="Yes">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No"
-                                    value="NoHeartDiseaseorAttack" readonly>
-                                <label class="form-check-label" for="No">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No"
+                                        value="NoHeartDiseaseorAttack" readonly>
+                                    <label class="form-check-label" for="No">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -156,25 +169,29 @@
                     </div>
                     <div class="Prediction2">
                         <div class="Box1">
-                            <Div class="GIF">
+                            <div class="GIF">
                                 <img src="https://www.figma.com/file/hN3Ifs6FNCKexSSf0pMOda/image/d009a3c45532e0fbd721c2c10814be70e208f5a8"
                                     alt="PredictionImage">
-                            </Div>
-                            <input type="text" name="" id="" readonly>
+                            </div>
+                            <textarea name="" id=""></textarea>
+                            <!-- <input type="text" name="" id="" readonly> -->
                         </div>
 
 
-
-                        <div class="radio-buttons statisfied_or_not">
-                            <div class="form-check satis">
-                                <input class="form-check-input " type="radio" name="Satisfaction" id="Satisfied"
-                                    value="YES" readonly>
-                                <label class="form-check-label " for="Satisfied">Satisfied</label>
-                            </div>
-                            <div class="form-check satis">
-                                <input class="form-check-input" type="radio" name="Satisfaction" id="NotSatisfied"
-                                    value="NO" readonly>
-                                <label class="form-check-label " for="NotSatisfied">Not Satisfied</label>
+                        <div class="satisfied_or_not">
+                            <div class="radio-buttons2">
+                                <div class="formcheck2">
+                                    <div class="form-check satis">
+                                        <input class="form-check-input " type="radio" name="Satisfaction" id="Satisfied"value="YES" readonly>
+                                        <label class="form-check-label " for="Satisfied">Satisfied</label>
+                                    </div>
+                                </div>
+                                <div class="formcheck2">
+                                    <div class="form-check satis">
+                                        <input class="form-check-input" type="radio" name="Satisfaction" id="NotSatisfied"value="NO" readonly>
+                                        <label class="form-check-label " for="NotSatisfied">Not Satisfied</label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
