--- a/HMS/templates/form_heart_result.html
+++ b/HMS/templates/form_heart_result.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="../static/public/favicon.ico">
     <link rel="stylesheet" href="../static/css/form_and_prediction.css">
-    <title>Diabetes Prediction</title>
+    <title>Heart Disease Prediction</title>
 </head>
 
 <body>
@@ -40,9 +40,6 @@
     <form onsubmit="return validateForm()" action="result" name="form1">
 
         <div class="background1"></div>
-        <div class="background2">
-            <!-- <img src="./public/Ellipse_13.svg"> -->
-        </div>
         <div class="header">
             <a href="./homepage" class="logo">
                 <img src="../static/public/logo.svg" alt="">
@@ -141,10 +138,10 @@
                     </div>
                     <div class="Prediction2">
                         <div class="Box1">
-                            <Div class="GIF">
+                            <div class="GIF">
                                 <img src="https://www.figma.com/file/hN3Ifs6FNCKexSSf0pMOda/image/d009a3c45532e0fbd721c2c10814be70e208f5a8"
                                     alt="PredictionImage">
-                            </Div>
+                            </div>
                             <input type="text" name="" id="" readonly>
                         </div>
 
