--- a/HMS/templates/result_diab.html
+++ b/HMS/templates/result_diab.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="Prediction2">
                         <div class="Box1">
-                            <div class="GIF">
+                            <div class="GIF1">
                                 <img src="../static/public/diabetesgif.gif"
                                     alt="PredictionImage">
                             </div>
@@ -173,17 +173,20 @@
                         </div>
 
 
-
-                        <div class="radio-buttons statisfied_or_not">
-                            <div class="form-check satis">
-                                <input class="form-check-input " type="radio" name="TrueResult" id="Satisfied"
-                                value="Satisfied" required>
-                                <label class="form-check-label " for="Satisfied">Satisfied</label>
-                            </div>
-                            <div class="form-check satis">
-                                <input class="form-check-input" type="radio" name="TrueResult" id="NotSatisfied"
-                                value="Unsatisfied" required>
-                                <label class="form-check-label " for="NotSatisfied">Not Satisfied</label>
+                        <div class="satisfied_or_not">
+                            <div class="radio-buttons2">
+                                <div class="formcheck2">
+                                    <div class="form-check satis">
+                                        <input class="form-check-input " type="radio" name="TrueResult" id="Satisfied"
+                                        value="Satisfied" required>
+                                        <label class="form-check-label " for="Satisfied">Satisfied</label>
+                                    </div>
+                                    <div class="form-check satis">
+                                        <input class="form-check-input" type="radio" name="TrueResult" id="NotSatisfied"
+                                        value="Unsatisfied" required>
+                                        <label class="form-check-label " for="NotSatisfied">Not Satisfied</label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
