--- a/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
@@ -72,7 +72,15 @@ body{
 }
 
 .error{
-    margin-left: 5rem;
+    padding-top:20px;
+    padding-bottom:20px;
+    margin-left: 10rem;
+    color: red;
+    font-family: 'Montserrat Alternates';
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 .main{
     display: flex;
@@ -142,11 +150,6 @@ body{
 }
 
 
-#textbox\ file {
-    height: 2rem;
-    margin-top: 10px;
-}
-
 .image{
     justify-self: center;
     width: 33.625rem;
@@ -156,6 +159,40 @@ body{
     margin-left: 8rem;
     z-index: 1;
 }
+
+.custom-file-input {
+    width:21vw;
+    height: 3.2rem;
+    flex-shrink: 0;
+    border-radius: 17px;
+    background: #D9D9D9;
+    display: flex;
+    border:none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size:18px;
+    cursor: pointer;
+  }
+
+  /* Hide the actual file input */
+  #textbox_file {
+    display: none;
+  }
+
+
+.small{
+    width:44vw;
+    margin-top:20px;
+    padding-bottom:20px;
+    margin-left: 5rem;
+    font-family: 'Montserrat Alternates';
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
 
 .background{
     display: flex;
@@ -173,7 +210,7 @@ body{
     position: absolute;
     display: flex;
     align-items: center;
-    bottom: -6vw;
+    bottom: -8vw;
     width: 11.3vw;
     height: 3.2vw;
     display: inline-flex;
