--- a/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
@@ -106,7 +106,6 @@ body{
     align-items: center;
     gap: 3.99vh;
     z-index: 1;
-    
 }
 
 #row{
@@ -161,8 +160,10 @@ body{
 }
 
 .custom-file-input {
-    width:21vw;
-    height: 3.2rem;
+    font-family: 'Montserrat Alternates';
+    margin-top: 1vw;
+    width:10vw;
+    height: 2vw;
     flex-shrink: 0;
     border-radius: 17px;
     background: #D9D9D9;
@@ -171,9 +172,14 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size:18px;
+    font-size:1.4vw;
     cursor: pointer;
   }
+.custom-file-input:hover{
+    background: black;
+    color: white;
+  }
+
 
   /* Hide the actual file input */
   #textbox_file {
@@ -210,6 +216,7 @@ body{
     position: absolute;
     display: flex;
     align-items: center;
+    justify-content: center;
     bottom: -8vw;
     width: 11.3vw;
     height: 3.2vw;
@@ -225,14 +232,3 @@ body{
     border:none;
     cursor: pointer;
 }
-
-/* .log{
-    color: #000;
-    font-family: 'Montserrat Alternates';
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    padding: 5rem;
-    padding-top: 2rem;
-} */
