static files changes

--- a/Frontend_and_UI_Design/Static pages/Diabetes page/style.css
+++ b/Frontend_and_UI_Design/Static pages/Diabetes page/style.css
@@ -65,9 +65,9 @@
 .med-ai {
   color: #000000;
   text-align: center;
-  font: 500 20px "MADE Evolve Sans EVO", sans-serif;
+  font: 600 22px "MADEEvolveSansEVO";
   position: absolute;
-  left: 195px;
+  left: 215px;
   top: 134px;
   display: flex;
   align-items: center;
