--- a/HMS/templates/dsignup.html
+++ b/HMS/templates/dsignup.html
@@ -97,6 +97,7 @@
                 Female <input type="radio" id="Female" name="gender" value="gender" required> <br> -->
 
                 <select name="gender" id="textbox" required>
+                    <option value="" disabled selected>Select</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
                 </select>
