--- a/HMS/templates/form_diab.html
+++ b/HMS/templates/form_diab.html
@@ -149,7 +149,8 @@
                     </div>
                     <div class="grid-item" id="grid-item6">
                         <div>GenHlth</div>
-                        <select name="GenHlth" id="" class="dropdown" >
+                        <select name="GenHlth" id="" class="dropdown" required >
+                            <option value="" disabled selected>Select</option>
                             <option value="1">Best</option>
                             <option value="2">Mediocre</option>
                             <option value="3">Average</option>
