--- a/HMS/templates/homepage.html
+++ b/HMS/templates/homepage.html
@@ -21,6 +21,7 @@
                 <div class="logoname">MED.AI</div>
             </div>
             <div class="nav">
+                <!-- <a href="./Static Pages/Diabetes Page/index.html" class="contact">About Models</a> -->
                 <a href="#contact" class="contact">Contact us</a>
                 <a href="#line1" class="about">About us</a>
                 <a href="./login" class="logsign">Login</a>
@@ -46,8 +47,8 @@
     <div class="ourmodels">
         <div class="head">Our Models</div>
         <div class="rect20and21">
-            <div class="rect">Diabetes</div>
-            <div class="rect">Heart</div>
+            <a href="./Static Pages/Diabetes Page/index.html" class="rect"><div>Diabetes</div></a>
+            <a href="./Static Pages/Heart Page/index.html" class="rect"><div>Heart</div></a>
         </div>
         <div class="rect22and23">
             <div class="rect">Coming Soon</div>
