--- a/HMS/templates/dsignup.html
+++ b/HMS/templates/dsignup.html
@@ -109,7 +109,7 @@
                 <input type="text" id="textbox" required name="work_address" placeholder="Work Address" maxlength="100" >
 
                 <label for="textbox_file" class="custom-file-input" id="file-label">Choose File</label>
-                <input type="file" id="textbox_file" name="certificate" maxlength="30" onchange="updateFileName(this)" required>
+                <input type="file" id="textbox_file" name="certificate" maxlength="30"  accept="application/pdf" onchange="updateFileName(this)" required>
                 <!--accept="application/pdf"-->
                 
 
