--- a/HMS/templates/homepage.html
+++ b/HMS/templates/homepage.html
@@ -47,8 +47,8 @@
     <div class="ourmodels">
         <div class="head">Our Models</div>
         <div class="rect20and21">
-            <a href="./Static Pages/Diabetes Page/index.html" class="rect"><div>Diabetes</div></a>
-            <a href="./Static Pages/Heart Page/index.html" class="rect"><div>Heart</div></a>
+            <a href="./static/diabetes/index.html" class="rect"><div>Diabetes</div></a>
+            <a href="./static/heart/index.html" class="rect"><div>Heart</div></a>
         </div>
         <div class="rect22and23">
             <div class="rect">Coming Soon</div>
