--- a/HMS/templates/static/diabetes/style.css
+++ b/HMS/templates/static/diabetes/style.css
@@ -1,3 +1,16 @@
+body{
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar{ 
+  width: 0.8vw;
+}
+body::-webkit-scrollbar-track{ 
+  background-color: #b3abab4c;
+}
+body::-webkit-scrollbar-thumb{ 
+  background-color: #574f4f4c;
+  border-radius: 0.46vw;
+}
 .diabetes-static-page,
 .diabetes-static-page * {
   box-sizing: border-box;
@@ -51,6 +64,7 @@
   justify-content: center;
 }
 .contact-us {
+  position: relative;
   color: #170808;
   text-align: center;
   font: 600 24px "Montserrat Alternates", sans-serif;
@@ -62,8 +76,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 }
 .about-us {
+  position: relative;
   color: #170808;
   text-align: center;
   font: 600 24px "Montserrat Alternates", sans-serif;
@@ -75,6 +91,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 }
 .med-ai {
   color: #000000;
