--- a/HMS/templates/static/heart/style.css
+++ b/HMS/templates/static/heart/style.css
@@ -1,3 +1,16 @@
+body{
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar{ 
+  width: 0.8vw;
+}
+body::-webkit-scrollbar-track{ 
+  background-color: #b3abab4c;
+}
+body::-webkit-scrollbar-thumb{ 
+  background-color: #574f4f4c;
+  border-radius: 0.46vw;
+}
 .heart-static-page,
 .heart-static-page * {
   box-sizing: border-box;
@@ -86,6 +99,8 @@
   justify-content: center;
 }
 .contact-us {
+  position: relative;
+  z-index: 1;
   color: #170808;
   text-align: center;
   font: 600 24px "Montserrat Alternates", sans-serif;
@@ -99,6 +114,8 @@
   justify-content: center;
 }
 .about-us {
+  position: relative;
+  z-index: 1;
   color: #170808;
   text-align: center;
   font: 600 24px "Montserrat Alternates", sans-serif;
